# llm4rec-bias

./: .gitignore  README.md  pyproject.toml
data/: item_meta.json  semantic_ids.json  sid_test.jsonl  sid_train.jsonl  sid_val.jsonl  test.jsonl  val.jsonl
docs/: bias_metric_refinements.xlsx
src/llm4rec/: data.py  eval.py  grpo.py  prompts.py  reward.py  semid.py  sft.py  sid_data.py  sid_eval.py  sid_grpo.py  sid_model.py  sid_reward.py  sid_sft.py
