[project]
name = "llm4rec-bias"
version = "0.1.0"
description = "Simple LLM4Rec on MovieLens-100K for studying RL bias/shortcut mitigation"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "torch>=2.13.0",
    "transformers>=5.13.1",
    "trl>=0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm4rec"]
